# microstructure-alpha-engine

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  environment.yml  pyproject.toml
microstructure_alpha/: __init__.py  plots.py
microstructure_alpha/backtest/: analysis.py  engine.py  metrics.py  regime.py
microstructure_alpha/data/: alignment.py  dataset.py  loader.py  pipeline.py
microstructure_alpha/features/: feature_diagnostics.py  feature_lists.py  feature_transforms.py  features.py  lob_features.py  (+2 more)
notebooks/: 01_data_collection.ipynb  01_data_download_exploration.ipynb  02__build_dataset.ipynb  02_dataset_construction.ipynb  03_eda_p1.ipynb  03_eda_p2.ipynb  03_feature_engineering.ipynb  03p5_feature_engineering_transforms.ipynb  04_alpha_model_move_features.ipynb  04_alpha_model_move_selection.ipynb  04_data_exploration.ipynb  04_feature_engineering_transforms.ipynb  05_alpha_model_direction_model.ipynb  05_target_construction.ipynb  06_combined_model_backtest.ipynb  06_modelling_baseline.ipynb  06_modelling_mid_price_moves_ML_baseline_part_1.ipynb  06_modelling_mid_price_moves_ML_baseline_part_2.ipynb  06_target_construction.ipynb  07_hmm_regime_modelling.ipynb  07_modelling_mid_price_move_multiple_models.ipynb  07_modelling_mid_price_moves_ML_baseline_part_1.ipynb  07_modelling_mid_price_moves_ML_baseline_part_2.ipynb  08_hmm_decay_model_backtest.ipynb  08_modelling_mid_price_move_multiple_models.ipynb  09_mid_price_move_direction_baseline_part_1.ipynb  10_combined_models_and_backtest.ipynb
scripts/: data_collector.py  new_data_collector.py
(+33 files in other folders)
