[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "microstructure_alpha"
version = "0.0.1"
description = "Limit order book alpha modelling with regime detection using machine learning and HMMs"
authors = [
  { name = "Jay Odedra" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["microstructure_alpha"]
include = ["pyproject.toml", "microstructure_alpha/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["microstructure_alpha"]
force-sort-within-sections = true

